@@ -1,0 +1,1 @@
+${testbaseurl}/download/java/java/17.0.10/java-17.0.10.zip
