@@ -1,0 +1,1 @@
+${testbaseurl}/download/java/java/17.0.6/java-17.0.6.tgz
