@@ -1,0 +1,1 @@
+# Mock git repository for testing
